<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.davidepalladino.lumenio.view.activity.MainActivity">

    <item
        android:id="@+id/status_light"
        android:orderInCategory="100"
        android:icon="@drawable/ic_round_status_off"
        android:title="@string/status_off"
        app:showAsAction="always" />

    <item
        android:id="@+id/bluetooth"
        android:orderInCategory="100"
        android:icon="@drawable/ic_round_bluetooth_disconnected"
        android:title="@string/bluetooth"
        app:showAsAction="always" />

    <item
        android:id="@+id/library_export"
        android:orderInCategory="100"
        android:icon="@drawable/ic_round_library_export"
        android:title="@string/library_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/library_import"
        android:orderInCategory="100"
        android:icon="@drawable/ic_round_library_import"
        android:title="@string/library_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/bluetooth_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_round_bluetooth_settings"
        android:title="@string/bluetooth_settings"
        app:showAsAction="never" />
</menu>