<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.ManualFragment" >

    <data>
        <variable name="manualViewModel" type="it.davidepalladino.lumenio.view.viewModel.ManualViewModel" />
        <variable name="manualFragment" type="it.davidepalladino.lumenio.view.fragment.ManualFragment" />
        <import type="android.graphics.Color" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background" >

        <it.davidepalladino.lumenio.util.ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/card_margin_horizontal"
                    android:layout_marginTop="@dimen/card_margin_top"
                    android:layout_marginBottom="@dimen/card_margin_bottom"
                    app:cardCornerRadius="@dimen/card_corner_radius" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="@dimen/header_card_padding"
                            android:layout_marginTop="@dimen/header_card_margin_top"
                            android:layout_marginStart="@dimen/header_card_margin_start" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_round_control_card"
                                android:layout_marginEnd="@dimen/icon_header_card_margin_end" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_header_card_size"
                                android:textColor="@color/primary_color"
                                android:text="@string/controls" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/body_card_padding" >

                            <com.skydoves.colorpickerview.ColorPickerView
                                android:id="@+id/color_picker"
                                android:layout_width="300dp"
                                android:layout_height="300dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="10dp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:layout_marginBottom="10dp"
                                android:layout_gravity="center"
                                app:cardCornerRadius="50dp"
                                android:elevation="5dp">

                                <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
                                    android:id="@+id/brightness_slide"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:borderColor_BrightnessSlider="@android:color/darker_gray"
                                    app:borderSize_BrightnessSlider="1"
                                    app:selector_BrightnessSlider="@drawable/wheel" />
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/card_margin_horizontal"
                    android:layout_marginBottom="@dimen/card_margin_bottom"
                    app:cardCornerRadius="@dimen/card_corner_radius" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="@dimen/header_card_padding"
                            android:layout_marginTop="@dimen/header_card_margin_top"
                            android:layout_marginStart="@dimen/header_card_margin_start" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_round_preview_card"
                                android:layout_marginEnd="@dimen/icon_header_card_margin_end" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_header_card_size"
                                android:textColor="@color/primary_color"
                                android:text="@string/preview" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/body_card_padding" >

                            <View
                                android:layout_width="50dp"
                                android:layout_height="40dp"
                                android:background="@{Color.rgb(manualViewModel.selectedRed, manualViewModel.selectedGreen, manualViewModel.selectedBlue)}"
                                android:backgroundTint="#000000"
                                android:backgroundTintMode="add"
                                android:layout_marginTop="5dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="10dp"
                                android:elevation="5dp"
                                tools:background="@color/primary_color" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:orientation="vertical"
                                android:layout_marginTop="5dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="10dp" >

                                <TableLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:layout_editor_absoluteX="3dp">

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

                                        <TextView
                                            android:layout_width="25dp"
                                            android:layout_height="wrap_content"
                                            android:layout_column="1"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text="@string/hex_label" />

                                        <TextView
                                            android:layout_width="25dp"
                                            android:layout_height="wrap_content"
                                            android:layout_column="2"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text="@string/red_label" />

                                        <TextView
                                            android:layout_width="25dp"
                                            android:layout_height="wrap_content"
                                            android:layout_column="3"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text="@string/green_label" />

                                        <TextView
                                            android:layout_width="25dp"
                                            android:layout_height="wrap_content"
                                            android:layout_column="4"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text="@string/blue_label" />
                                    </TableRow>

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

                                        <TextView
                                            android:layout_width="25dp"
                                            android:layout_height="wrap_content"
                                            android:layout_column="1"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text='@{String.format("#%s", manualViewModel.selectedHex)}'
                                            tools:text="0" />

                                        <TextView
                                            android:layout_width="25dp"
                                            android:layout_height="wrap_content"
                                            android:layout_column="2"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text='@{String.format("%03d", manualViewModel.selectedRed)}'
                                            tools:text="0" />

                                        <TextView
                                            android:layout_width="25dp"
                                            android:layout_height="wrap_content"
                                            android:layout_column="3"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text='@{String.format("%03d", manualViewModel.selectedGreen)}'
                                            tools:text="0" />

                                        <TextView
                                            android:layout_width="25dp"
                                            android:layout_height="wrap_content"
                                            android:layout_column="4"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text='@{String.format("%03d", manualViewModel.selectedBlue)}'
                                            tools:text="0" />
                                    </TableRow>
                                </TableLayout>
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </it.davidepalladino.lumenio.util.ScrollView>
    </LinearLayout>
</layout>
